--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <script src="quiz.js"></script>
     <title>JS quiz</title>
 </head>
 
@@ -14,10 +13,13 @@
     <h1>Quiz</h1>
     <h2 id="question"></h2>
     <div id="options">
+        <button class="option"></button>
     </div>
     <div id="correct">
-        Questions correct: <span id="correct">0 of 0</span>
+        Questions correct: <span id="correct-span">0 of 0</span>
     </div>
+
+    <script src="quiz.js"></script>
 </body>
 
 </html>
