--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <title>JS quiz</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <h1>Quiz</h1>
     <h2 id="question"></h2>
     <div id="options">
-      <button class="option"></button>
+        <button class="option"></button>
     </div>
     <div id="correct">
-      Questions correct: <span id="correct-span">0 of 0</span>
+        Questions correct: <span id="correct-span">0 of 0</span>
     </div>
     <h2 id="counter"></h2>
-    <div id="reset">
-      <button id="resetBtn">Reset game</button>
+    <div id="start">
+        <button id="startBtn">Start game</button>
     </div>
-
+    <div id="reset">
+        <button id="resetBtn">Reset game</button>
+    </div>
     <script src="quiz.js"></script>
-  </body>
+</body>
+
 </html>
