--- a/index.html
+++ b/index.html
@@ -1,28 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+      integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>JS quiz</title>
-</head>
+  </head>
 
-<body>
-    <h1>Quiz</h1>
-    <h2 id="question"></h2>
-    <div id="options">
-        <button class="option"></button>
+  <body class="bg-light">
+    <nav class="light-blue lighten-1">
+      <div class="nav-wrapper container">
+        <a class="brand-logo center">Quiz: Who wants to be broke?</a>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2 mx-auto">
+          <div id="startReset">
+            <button class="startBtn">Start game</button>
+          </div>
+        </div>
+        <div class="col-md-8 mx-auto">
+          <div class="card card-body text-center mt-5 orange lighten-1">
+            <h2 id="question"></h2>
+            <div class="card card-body text-center mt-5 orange lighten-2">
+              <div id="options">
+                <button class="option"></button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 mx-auto">
+          <div class="counter">
+            <br />
+            <h3>Time left:</h3>
+            <button id="counter" disabled></button>
+          </div>
+        </div>
+      </div>
     </div>
     <div id="correct">
-        Questions correct: <span id="correct-span">0 of 0</span>
-    </div>
-    <h2 id="counter"></h2>
-    <div id="startReset">
-        <button class="startBtn">Start game</button>
+      Questions correct: <span id="correct-span">0 of 0</span>
     </div>
     <script src="quiz.js"></script>
-</body>
-
+  </body>
 </html>
